--- a/S431 Final Presentation.Rmd
+++ b/S431 Final Presentation.Rmd
@@ -335,9 +335,20 @@ $$
 \end{bmatrix}
 =
 \begin{bmatrix}
-7.24 \\
+7.2115 \\
 -0.0408 \\
 -0.0646  \\
+0.3292  \\
+0.0085   \\
+-1.266 \\
+-0.175 \\
+-0.049 
+\end{bmatrix}
+=
+\begin{bmatrix}
+6.11 - 8.24 \\
+-0.08 - (-0.0042)  \\
+-0.1033 - (-.043338) \\
 0.3292  \\
 0.0085   \\
 -1.266 \\
