--- a/S431 Final Presentation.Rmd
+++ b/S431 Final Presentation.Rmd
@@ -1,5 +1,6 @@
 ---
-title: "Models to Determine Relationship of Motor Skills on Social Deficit"
+title: "Linear Models S431 Final Presentation:"
+subtitle: "Exploring the Relationship between Motor Skills and Social Deficits in Children"
 author: "Alli, Nick, Thomas"
 date: "12/4/2019"
 output: 
@@ -25,13 +26,13 @@ library(ggpubr)
 ```
 
 ```{r, echo=FALSE,include=FALSE}
-kki.demo <- read.csv("KKI_demographicInfo.csv")
-kki.social <- read.csv("KKI_SocialResponsivenessScaleQuestionnaire.csv")
-kki.movement <- read.csv("KKI_movementAssessmentBatteryforChildren.csv")
-kki.hand <- read.csv("KKI_handedness.csv")
-wisc <- read.csv("KKI_WechslerIntelligenceScaleforChildren.csv")
-wisc4GAI <- read.csv("wisc4GAI_lookup.csv")
-wisc5GAI <- read.csv("wisc5GAI_lookup.csv")
+kki.demo <- read.csv("Data/KKI_demographicInfo.csv")
+kki.social <- read.csv("Data/KKI_SocialResponsivenessScaleQuestionnaire.csv")
+kki.movement <- read.csv("Data/KKI_movementAssessmentBatteryforChildren.csv")
+kki.hand <- read.csv("Data/KKI_handedness.csv")
+wisc <- read.csv("Data/KKI_WechslerIntelligenceScaleforChildren.csv")
+wisc4GAI <- read.csv("Data/wisc4GAI_lookup.csv")
+wisc5GAI <- read.csv("Data/wisc5GAI_lookup.csv")
 colnames(kki.demo)[1] <- "ID"
 colnames(kki.social)[1] <- "ID"
 colnames(kki.movement)[1] <- "ID"
@@ -75,9 +76,11 @@ kki <- merge(kki.demo,kki.social)
 kki <- merge(kki,kki.movement)
 kki <- merge(kki,wisc.combo)
 kki <- merge(kki,kki.hand)
+kki$Hand <- cut(kki$EdinburghHandedness_Integer,c(-1.01,-.5,.5,1.01),labels = c("Left","Mixed","Right"))
 ## Making standard Scores
 kki.V1 <- subset(kki,kki$SRS_VERSION == 1)
 kki.V2 <- subset(kki,kki$SRS_VERSION == 2)
+
 Two_to_One <- function(from,target) {
   y.bar = mean(target);y.sd = sd(target);
   x.bar = mean(from);x.sd = sd(from);
@@ -95,6 +98,7 @@ kki$sqrt.Standard <- sqrt(kki$Standard)
 kki <- subset(kki,!is.na(kki$SRS_TotalRawScore))
 kki <- subset(kki, !is.na(kki$mABC_TotalStandardScore))
 kki <- subset(kki,kki$mABC_AGE<14)
+kki$Hand <- cut(kki$EdinburghHandedness_Integer,c(-1.01,-.5,.5,1.01),labels = c("Left","Mixed","Right"))
 kki2 <- filter(kki,PrimaryDiagnosis != "None",SecondaryDiagnosis ==c("Yes", "No"))
 multdia <- filter(kki, PrimaryDiagnosis != "None", SecondaryDiagnosis =="Yes")
 singdia <- filter(kki, PrimaryDiagnosis != "None" , SecondaryDiagnosis == "No")
@@ -106,35 +110,26 @@ kki.adhd2 <- subset(kki.adhd, kki.adhd$SRS_VERSION == 2)
 ```
 
 
-## Introduction: Study Details & Relevant Background Information
+## Study Details & Relevant Background Information
 
 - Autism (ASD) and Attention Deficit/Hyperactivity Disorder (ADHD) are frequently observed in children, but are still not fully understood. 
 
-- Researchers at Kennedy Krieger Institute(KKI)  ran a study on children with ASD, ADHD, and typically developing children to study differences in social deficits, motor impairment, intelligence.
+
     - It is known that children with developmental disorders suffer from motor impairment concurrent with social deficits       associated with their respective diagnoses(1,2).  The extent and cause of this correlation merits further research.
 
-- Metrics and Scales Used to Quantify Symptom Severity in Children:
-    1. Social Responsiveness Scale Questionnaire (SRS): measures severity of social deficits in children (higher scores indicate more social deficits)
-    2. Movement Assessment Battery for Children (mABC): measures motor impairments in children.  Three subcategories for assessment include dexterity, aiming and catching, and balance summed to obtain the mABC Total Standard Score
-    3. Wechsler Intelligence Scale for Children (WISC): measures intelligence in children.  Two versions of the test quantify vocabulary, information, picture concepts, etc. 
+- Kennedy Krieger Institute(KKI) Study: Data Collected for Investigation and Analysis: 
 
-## Introduction: Areas of Particular Interest
-### Data and Analysis
+         Social Responsiveness Scale Questionnaire (SRS), Movement Assessment Battery 
+         for Children (mABC), Wechsler Intelligence Scale for Children (WISC), Gender, 
+         Age,Handedness (quantified by Edinburgh Handedness Integer), Primary and 
+         Secondary Diagnosis
 
 - We want to investigate the overall association between social deficits and motor skills for each diagnosis group.
 
-
-    <large>> Primary Endpoint: What motor skills are associated with SRS scores for each diagnosis group.</large>
+    - Primary Endpoint: What motor skills are associated with SRS scores for each diagnosis group.
   
-    <large>> Secondary Endpoint: What factors influence this association?</large>
-    
-- Data Collected for Investigation and Analysis:
-    - Demographic (Gender, Age)
-    - Handedness (quantified by Edinburgh Handedness Integer)
-    - Primary and Secondary Diagnosis
-    - SRS Total
-    - mABC Total and Subscores
-    - WISC Score
+    - Secondary Endpoint: What factors influence this association?
+
 
 ## Methods: Cleaning Data
 
@@ -153,23 +148,27 @@ kki.td.male <- subset(kki.td, kki.td$Gender == 'M')
 kki.td.female <- subset(kki.td,kki.td$Gender == 'F')
 maleCount <- c(nrow(kki.asd.male),nrow(kki.adhd.male),nrow(kki.td.male))
 femaleCount <- c(nrow(kki.asd.female),nrow(kki.adhd.female),nrow(kki.td.female))
-rightCount <- c(124,285,307)
-leftCount <- c(20,36,42)
-table1 <- cbind(diagnosis,counts,round(age,4),maleCount,femaleCount,rightCount,leftCount)
-FinalTable <- kable(table1,col.names = c("Primary","Count","Avg Age","Males","Females","RightHanded","LeftHanded"))
-agehist <-ggplot(data = na.omit(kki),aes(group = PrimaryDiagnosis, y = mABC_AGE, colour = PrimaryDiagnosis)) + geom_boxplot()+ coord_flip()+ylab("Age (Years)")+theme_classic() 
+rightCount <- c(length(which(kki.asd$Hand == "Right")),length(which(kki.adhd$Hand == "Right")),length(which(kki.td$Hand == "Right")))
+leftCount <- c(length(which((kki.asd$Hand == "Left"))),length(which(kki.adhd$Hand == "Left")),length(which(kki.td$Hand == "Left")))
+mixedCount <- c(length(which((kki.asd$Hand == "Mixed"))),length(which((kki.adhd$Hand == "Mixed"))),length(which((kki.td$Hand == "Mixed"))))
+table1 <- cbind(diagnosis,counts,round(age,4),maleCount,femaleCount,leftCount,mixedCount,rightCount)
+FinalTable <- kable(table1,col.names = c("Primary","Count","Avg Age","Males","Females","Left","Mixed","Right"))
+agehist <-ggplot(data = na.omit(kki),aes(x = mABC_AGE, colour = PrimaryDiagnosis, fill=PrimaryDiagnosis)) + geom_histogram(fill="white")+ylab("Age (Years)")+theme_classic() 
 ```
 
 - Removed Subjects that were under 14, since 94% subjects diagnosed with Autism or ADHD were under 14. Reduced total observations from 832 to 755
 
-```{r, fig.height=2, fig.width=5, fig.align="center"}
+```{r, fig.height=2, fig.width=5, fig.align="center", include=FALSE}
 agehist
 ```
 
 - Then Removed Observations that had N/A values for either SRS_TotalRawScore or mABC_TotalStandardScore which furthur reduced the total observations to 568 Observations
+
+
+
 - Converted all the WISC scores to the GAI scale for comparability across versions
 
-```{r}
+```{r, height=1}
 FinalTable
 ```
 
@@ -203,8 +202,7 @@ SRS.Balance <- ggplot(data = graph.dat, aes(x = mABC_Balance.Component.StandardS
 ggarrange(SRS.Manual, SRS.AimAndCatch, SRS.Balance, total, common.legend = TRUE, legend="bottom")
 ```
 
-- Key Takeaways: The association between motor skills and social deficits is different for each of 
-the subcomponents of the mABC, and differ for children with different primary diagnoses.
+  - Key Takeaway: The association between motor skills and social deficits is different for each of the subcomponents of the mABC, and differ for children with different primary diagnoses.
 
 
 
@@ -225,12 +223,12 @@ ggarrange(gaisrs1, gaisrs2, nrow=1, common.legend = TRUE, legend="bottom")
 
 ```{r, include=FALSE}
 kki$Hand <- cut(kki$EdinburghHandedness_Integer,c(-1.01,-.5,.5,1.01),labels = c("Left","Mixed","Right"))
-hand1 <- ggplot(data = na.omit(kki),aes(group = Hand,y = mABC_TotalStandardScore, colour = Hand)) + geom_boxplot() + facet_wrap(na.omit(kki)$PrimaryDiagnosis)+ theme(legend.position="none")
-hand2 <-ggplot(data = na.omit(kki),aes(group = Hand,y = Standard, colour = Hand)) + geom_boxplot() + facet_wrap(na.omit(kki)$PrimaryDiagnosis)+ theme(legend.position="none")
+hand1 <- ggplot(data = na.omit(kki),aes(group = Hand,y = mABC_TotalStandardScore, colour = Hand)) + geom_boxplot() + facet_wrap(na.omit(kki)$PrimaryDiagnosis)+ theme(legend.position="none")+ ylab("Total Motor Score")+ggtitle("Handedness & Motor Skills")
+hand2 <-ggplot(data = na.omit(kki),aes(group = Hand,y = Standard, colour = Hand)) + geom_boxplot() + facet_wrap(na.omit(kki)$PrimaryDiagnosis)+ theme(legend.position="none")+ ylab("SRS Total Score")+ggtitle("Handedness & Social Deficits")
 ```
 
-```{r, fig.height=4, fig.width=15, fig.align="left"}
-ggarrange(gaisrs1, gaisrs2, hand1, hand2, nrow=1,common.legend = TRUE, legend="bottom")
+```{r, fig.height=4, fig.width=11, fig.align="left"}
+ggarrange(gaisrs1, gaisrs2, hand2, hand1, nrow=1,common.legend = TRUE, legend="bottom")
 ```
 
 - Key Takeaways: 
@@ -238,6 +236,7 @@ ggarrange(gaisrs1, gaisrs2, hand1, hand2, nrow=1,common.legend = TRUE, legend="b
   > There seems to be a negative correlation between intelligence and motor skills, but no correlation between intelligence and social deficit.
   
   > Something is going on with Mixed-handedness(?) <- Nick, approve this
+
 ## Proposed Models
 
 $$
@@ -260,11 +259,11 @@ kki.2 <- subset(kki,kki$SRS_VERSION == 2)
 t.test(kki.1$SRS_TotalRawScore,kki.2$SRS_TotalRawScore)
 ```
 
-- seperate SRS Versions from Welch t-test
+Seperate SRS Versions from Welch t-test:
 
 $$
-H_0: \text{E[SRS Scores Version 1] = E[SRS Scores Version 2} \\
-H_1: \text{E[SRS Total from Version 1]} \space \neq \text{E[SRS Scores from Version 2]} \\
+H_0: \text{Mean of SRS Total Scores from Version 1 = Mean of SRS Total Scores from Version 2} \\
+H_1: \text{Mean of SRS Total Scores from Version 1} \space \neq \text{Mean of SRS Total Scores from Version 2} \\
 \text{Under the null we got a t-statistc of -6.03 from a t-distribution of 417.38 Degrees of Freedom} \\
 \text{that has a p-value of} \space 3.511 \times 10^{-9} \\ \space \text{Under} \space \alpha = .05 \space \text{we reject the null}
 \text{ and believe that there is a true difference in the mean}
@@ -275,8 +274,8 @@ $$
 ```{r}
 nodia1 <- subset(nodia,nodia$SRS_VERSION == 1)
 nodia2 <- subset(nodia,nodia$SRS_VERSION == 2)
-lm.nodia1 <- lm(SRS_TotalRawScore ~ mABC_AimingAndCatching.Component.StandardScore + mABC_Balance.Component.StandardScore + EdinburghHandedness_Integer + GAI  + Gender + mABC_AGE, data = nodia1)
-lm.nodia2 <- lm(SRS_TotalRawScore ~ mABC_AimingAndCatching.Component.StandardScore + mABC_Balance.Component.StandardScore + EdinburghHandedness_Integer + GAI  + Gender + mABC_AGE, data = nodia2)
+lm.nodia1 <- lm(Standard ~ mABC_AimingAndCatching.Component.StandardScore + mABC_Balance.Component.StandardScore + EdinburghHandedness_Integer + GAI  + Gender + mABC_AGE, data = nodia1)
+lm.nodia2 <- lm(Standard ~ mABC_AimingAndCatching.Component.StandardScore + mABC_Balance.Component.StandardScore + EdinburghHandedness_Integer + GAI  + Gender + mABC_AGE, data = nodia2)
 ```
 
 
@@ -337,22 +336,35 @@ $$
 \end{bmatrix}
 =
 \begin{bmatrix}
-64.0176 \\
--2.3512 \\
-1.3089  \\
-8.3848  \\
-0.0620   \\
--13.9720 \\
--9.3211 \\
- -1.1236 
+7.2115 \\
+-0.0408 \\
+-0.0646  \\
+0.3292  \\
+0.0085   \\
+-1.266 \\
+-0.175 \\
+-0.049 
+\end{bmatrix}
+=
+\begin{bmatrix}
+6.11 - 8.24 \\
+-0.08 - (-0.0042)  \\
+-0.1033 - (-0.0433) \\
+0.1356 - 0.5182  \\
+0.00261 - 0.0144   \\
+-1.563711 - (-0.9777) \\
+-0.414 - (0.078) \\
+-0.1403 - 0.0456
 \end{bmatrix}
 $$
 
-```{r,echo = FALSE}
+
+```{r}
 ggplot(data = kki.adhd,aes(x = mABC_Balance.Component.StandardScore,y = fitted(lm.adhd), colour = ADHD_Subtype)) + geom_point() + geom_jitter() +
   geom_line(data = kki.adhd,aes(x = mABC_Balance.Component.StandardScore, y = mABC_Balance.Component.StandardScore *-2.38729 + 64.0176),colour = 'red',size = 1.5) + 
   geom_line(data = kki.adhd,aes(x = mABC_Balance.Component.StandardScore, y = mABC_Balance.Component.StandardScore *-2.38729 + 50.0456),colour = 'blue',size = 1.5) +     ggtitle("Effect of Balance Component on Total SRS Score") + ylab("Fitted Values") + xlab("mABC Balance Score") + facet_wrap(~Gender)
 ```
+
 
 ```{r, include=FALSE}
 males <- which(kki.adhd1$Gender == "M")
@@ -369,19 +381,26 @@ ggplot(data = kki.adhd[males,],aes(x = mABC_Balance.Component.StandardScore,y = 
 ```
 
 
-```{r}
+
+```{r, fig.height=3, fig.width=4}
 ggplot(data = NULL,aes(x = fitted(lm.adhd), y = residuals(lm.adhd))) + geom_point() + geom_hline( yintercept = 0) + geom_smooth() +
-  ggtitle("Residual Plot for ADHD Model(1)") + xlab("Fitted Values") + ylab("Residual Values")
+  ggtitle("Residual Plot for ADHD Model(1)") + xlab("Fitted Values") + ylab("Residual Values")+theme_classic()
 ```
 
-
+```{r}
+CI_adhd <- confint(lm.adhd, c('mABC_AimingAndCatching.Component.StandardScore', 'mABC_Balance.Component.StandardScore', 'EdinburghHandedness_Integer', 'GAI', 'ADHD_SubtypeInattentive', 'GenderM', 'mABC_AGE'))
+CI_LB_adhd <- CI_adhd[1]
+CI_UB_adhd <- CI_adhd[2]
+```
 
 ```{r,include= FALSE}
-standardize <- function(model) {
-  s = (1/85) * sum(residuals(model)^2)
+studentize <- function(model) {
+  n = length(fitted(model))
+  p = length(model$coefficients)
+  s = (1/(n-p-1)) * sum(residuals(model)^2)
   residuals(model)/ (s * (sqrt(1-influence(model)$hat)))
 }
-student.lmadhd <- standardize(lm.adhd)
+student.lmadhd <- studentize(lm.adhd)
 leverage.lmadhd <- influence(lm.adhd)$hat
 ```
 
@@ -403,10 +422,9 @@ $$
 
 ## Results: ASD
 
-```{r}
+```{r,}
 aut <- subset(kki, kki$PrimaryDiagnosis == "Autism")
-lm.aut <- lm(SRS_TotalRawScore ~ mABC_AimingAndCatching.Component.StandardScore + mABC_Balance.Component.StandardScore + EdinburghHandedness_Integer + GAI + ADHD_Subtype + Gender + mABC_AGE, data = aut)
-lm.aut.basic <- lm(SRS_TotalRawScore ~ mABC_AimingAndCatching.Component.StandardScore + mABC_Balance.Component.StandardScore, data = aut)
+lm.aut <- lm(Standard ~ mABC_AimingAndCatching.Component.StandardScore + mABC_Balance.Component.StandardScore + EdinburghHandedness_Integer + GAI + ADHD_Subtype + Gender + mABC_AGE, data = aut)
 ```
 
 $$
@@ -416,7 +434,7 @@ $$
             \text{Aiming And Catching Score} \\
             \text{EdinburgHandedness_Integer} \\
             \text{GAI} \\
-            \text{Secondary Diagnosis Yes} \\
+            \text{ADHD Subtype Inattentive} \\
             \text{Gender Male} \\
             \text{mABC_AGE} 
 \end{bmatrix}
@@ -431,16 +449,38 @@ $$
 -6.57359 \\
  1.22425 
 \end{bmatrix}
+=
+\begin{bmatrix}
+18.95858 - 89.5433 \\
+-0.145524016 - 0.0255974  \\
+-0.117046018 - 0.0327538 \\
+-0.05088326 - 0.70459855  \\
+-0.003114035 - 0.02013125   \\
+-1.849132324 - (-0.69237235) \\
+-0.654060303 - 0.31781322 \\
+-0.231019073 - 0.13630759
+\end{bmatrix}
 $$
 
 
-```{r}
-ggplot(data = NULL,aes(x = fitted(lm.aut), y = residuals(lm.aut))) + geom_point() + geom_hline( yintercept = 0) +
-  ggtitle("Residual Plot for Autism Model(1)") + xlab("Fitted Values") + ylab("Residual Values")
+```{r, fig.height=3, fig.width=4}
+ggplot(data = NULL,aes(x = fitted(lm.aut), y = residuals(lm.aut))) + geom_point() + geom_hline( yintercept = 0) + geom_smooth()+
+  ggtitle("Residual Plot for Autism Model") + xlab("Fitted Values") + ylab("Residual Values") +theme_classic()
 ```
 
-```{r}
+```{r, include=FALSE}
 qqnorm(lm.aut$residuals)
 qqline(lm.aut$residuals, col = 'red')
 ```
 
+
+
+
+```{r, include = FALSE}
+## There are some changes/
+student.lmaut <- studentize(lm.aut)
+leverage.lmaut <- influence(lm.aut)$hat
+ggplot(data = NULL,aes(x = leverage.lmaut, y = student.lmaut)) + geom_point() + geom_hline( yintercept = 0)
+```
+
+## Concluding Thoughts
