--- a/S431 Final Presentation.Rmd
+++ b/S431 Final Presentation.Rmd
@@ -271,10 +271,11 @@ $$
 ## Resutls: Typically Developing
 
 ```{r}
-nodia1 <- subset(nodia,nodia$SRS_VERSION == 1)
-nodia2 <- subset(nodia,nodia$SRS_VERSION == 2)
-lm.nodia1 <- lm(Standard ~ mABC_AimingAndCatching.Component.StandardScore + mABC_Balance.Component.StandardScore + EdinburghHandedness_Integer + GAI  + Gender + mABC_AGE, data = nodia1)
-lm.nodia2 <- lm(Standard ~ mABC_AimingAndCatching.Component.StandardScore + mABC_Balance.Component.StandardScore + EdinburghHandedness_Integer + GAI  + Gender + mABC_AGE, data = nodia2)
+lm.nodia <- lm(sqrt.Standard ~ mABC_AimingAndCatching.Component.StandardScore + mABC_Balance.Component.StandardScore + EdinburghHandedness_Integer + GAI  + Gender + mABC_AGE, data = nodia)
+summary(lm.nodia)
+CI_nodia <- confint(lm.nodia, c('mABC_AimingAndCatching.Component.StandardScore', 'mABC_Balance.Component.StandardScore', 'EdinburghHandedness_Integer', 'GAI', 'GenderM', 'mABC_AGE'))
+CI_LB_nodia <- CI_aut[1]
+CI_UB_nodia <- CI_aut[2]
 ```
 
 
@@ -292,13 +293,23 @@ where: \\
             \end{bmatrix}
 =
 \begin{bmatrix}
-43.52523 \\
--0.14406 \\
-0.01693  \\
--1.46571  \\
-0.05956   \\
--1.12175  \\
--0.09471
+4.198941 \\
+-0.017533 \\
+-0.038443  \\
+-0.258429  \\
+0.010782   \\
+-0.045793  \\
+-0.032151
+\end{bmatrix}
+=
+\begin{bmatrix}
+3.410752 - 4.98713 \\
+-0.0743438711 - 0.03927879  \\
+-0.1012364991 - 0.02435081 \\
+-0.5748815094 - 0.05802266  \\
+0.0003657782 - 0.02119846   \\
+-0.4461760871 - 0.35458960 \\
+-0.1770922562 - 0.11279089
 \end{bmatrix}
 $$
 
@@ -398,10 +409,9 @@ $$
 
 ## Results: ASD
 
-```{r}
+```{rm include = FALSE}
 aut <- subset(kki, kki$PrimaryDiagnosis == "Autism")
 lm.aut <- lm(sqrt.Standard ~ mABC_AimingAndCatching.Component.StandardScore + mABC_Balance.Component.StandardScore + EdinburghHandedness_Integer + GAI + ADHD_Subtype + Gender + mABC_AGE, data = aut)
-summary(lm.aut)
 CI_aut <- confint(lm.aut, c('mABC_AimingAndCatching.Component.StandardScore', 'mABC_Balance.Component.StandardScore', 'EdinburghHandedness_Integer', 'GAI', 'ADHD_SubtypeInattentive', 'GenderM', 'mABC_AGE'))
 CI_LB_aut <- CI_aut[1]
 CI_UB_aut <- CI_aut[2]
